duicontrolpanel (0.12.23~unreleased) unstable; urgency=low

  * Fixes: NB#265196 - "Privacy mode" plug-in on Notifications settings page
    should be visually separated from rest of the plug-ins
  * Fixes: NB#268370 - [TASK] Brigthness slider needs info about power
    save mode
  * Fixes: NB#269545 - Notification: §qtn_noti_settings_subheader§ [Show
    notifications for:] is missing

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 04 Jul 2011 16:48:42 +0200

duicontrolpanel (0.12.22) unstable; urgency=low

  * Fixes: NB#270097 - there is only one applet in about category

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 15 Jun 2011 11:24:42 +0200

duicontrolpanel (0.12.21) unstable; urgency=low

  * Fixes: NB#260681 - 'Show events from:'
    §qtn_home_events_settings_subheader§ subheader should be shown in
    Notifications -> Events feed

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 02 Jun 2011 15:45:48 +0200

duicontrolpanel (0.12.20) unstable; urgency=low

  * Fixes: NB#260186 - Please remove the help icon from the reset
    category header...
  * Fixes: NB#259996 - When opening settings, all the content comes with
    a flicker

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 27 May 2011 15:23:43 +0200

duicontrolpanel (0.12.19) unstable; urgency=low

  * Fixes: NB#258212 - On reopening the settings , the settings app is
    getting minimized

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 25 May 2011 10:42:10 +0200

duicontrolpanel (0.12.18) unstable; urgency=low

  * Fixes: NB#255312 - Error seen at 'QDBusConnection: session D-Bus
    connection created before QCoreApplication. Application may
    misbehave'
  * Fixes: NB#256581 - Updated to style for horizontal separators
  * Fixes: NB#256331 - [TASK] Closing transition is not proper while
    closing the windows
  * Fixes: NB#253644 - Settings; String §qtn_locfw_positioning§ is
    clipped in Russian language
